syntax = "proto3";

package org.experimental.schema.core;

import "experimental/schema/core/base.proto";

option java_multiple_files = true;
option java_package = "org.experimental.schema.core";

// An individual phenotypic feature, observed as either present or absent (negated), with possible onset, modifiers and
// frequency
// Intended to capture an ontology term from Mammalian Phenotype (MP) or comparable Ontology.
message PhenotypicFeature {

  // Free-text description of the phenotype. Note this is not a acceptable place to document/describe the phenotype -
  // the type and onset etc... fields should be used for this purpose.
  string description = 1;

  // The primary ontology class which describes the phenotype. For example "HP:0001363"  "Craniosynostosis"
  // FHIR mapping: Condition.identifier
  OntologyClass type = 2;

  // Flag to indicate whether the phenotype was observed or not. Default is 'false', in other words the phenotype was
  // observed. Therefore it is only required in cases to indicate that the phenotype was looked for, but found to be
  // absent.
  // More formally, this modifier indicates the logical negation of the OntologyClass used in the 'type' field.
  // *CAUTION* It is imperative to check this field for correct interpretation of the phenotype!
  bool excluded = 3;

  // the age of the model at the time the experiment was performed
  AgeElement observed_at_age = 4;

  // Evidences for how the phenotype was determined.
  repeated Evidence evidence = 5;


}